# text-speaker

./: .gitignore  README.md  pyproject.toml
.codex/environment/: environment.toml
examples/: feibi_zh_tts.py
scripts/: build.py
src/test_genie/: __init__.py  feibi_zh_tts.py  gui.py
src/text_speaker/: __init__.py  build.py  gui.py  main.py
