[project]
name = "text-speaker"
version = "0.1.0"
description = "键盘说话器：基于 Genie-TTS 的中文语音生成工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "genie-tts>=2.0.2",
]

[dependency-groups]
build = [
    "pyinstaller>=6.14.0",
]

[project.scripts]
dev = "text_speaker.main:main"
build = "text_speaker.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
default-groups = ["build"]
